# utxo-recycler

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  README.md  fly.toml  start.sh
migrations/: 001_initial.sql  002_blockheight_cutoff.sql  003_payment_attempts.sql
src/: config.rs  main.rs  rate_limit.rs
src/api/: routes.rs
src/db/: models.rs
src/lightning/: lnurl.rs  mod.rs  nwc.rs
src/wallet/: bdk.rs  mod.rs
src/workers/: deposit_monitor.rs  mod.rs  payment_processor.rs
static/: style.css
templates/: confirm.html  index.html  recycle.html
