[package]
name = "utxo-recycler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Bitcoin / BDK
bdk_wallet = "1.0"
bdk_electrum = "0.20"
electrum-client = "0.22"
bitcoin = "0.32"

# Lightning / Nostr
nostr-sdk = "0.38"
nostr = { version = "0.38", features = ["nip04"] }
urlencoding = "2"

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
qrcode = "0.14"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
